--- a/SliideTest/src/main/AndroidManifest.xml
+++ b/SliideTest/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name=".Application"
         android:allowBackup="false"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".presentation.feature.users.UsersActivity"
             android:screenOrientation="user">
